// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon-position prop 1`] = `
<button class="ghb-button ghb-button--default ghb-button--normal">
  <div class="ghb-button__content"><i class="ghb-icon ghb-icon-plus ghb-button__icon">
      <!----></i></div>
</button>
`;

exports[`icon-prefix prop 1`] = `
<button class="ghb-button ghb-button--default ghb-button--normal">
  <div class="ghb-button__content"><i class="my-icon my-icon-success ghb-button__icon">
      <!----></i></div>
</button>
`;

exports[`loading slot 1`] = `
<button class="ghb-button ghb-button--default ghb-button--normal ghb-button--loading">
  <div class="ghb-button__content">Custom Loading</div>
</button>
`;

exports[`loading-size prop 1`] = `
<button class="ghb-button ghb-button--default ghb-button--normal ghb-button--loading">
  <div class="ghb-button__content">
    <div class="ghb-loading ghb-loading--circular ghb-button__loading"><span class="ghb-loading__spinner ghb-loading__spinner--circular" style="color: currentColor; width: 10px; height: 10px;"><svg viewBox="25 25 50 50" class="ghb-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
  </div>
</button>
`;
